--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,9 @@ version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-lazy_static = "1.4.0"
-pest = "2.1.3"
-pest_derive = "2.1.0"
+lalrpop-util = "0.19.0"
+regex = "1"
 
-[dev-dependencies]
-pest_ascii_tree = "0.1.0"
+[build-dependencies]
+lalrpop = {version="0.19.0", features = ["lexer"] }
