--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ license = "MIT"
 [dependencies]
 lalrpop-util = "0.19.0"
 regex = "1"
+rustyline = "7.1.0"
+thiserror = "1.0.22"
 
 [build-dependencies]
 lalrpop = {version="0.19.0", features = ["lexer"] }
