Add versions to workspace paths

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["cli", "cel"]
 
 [dependencies]
 rustyline = "7.1.0"
-cel-interpreter = {path="../interpreter"}
+cel-interpreter = {path="../interpreter", version="0.1.3-alpha.0"}
 dirs = "3.0.1"
 anyhow = "1.0.36"
 
