--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -9,11 +9,11 @@ license = "MIT"
 categories = ["interpreter", "cel"]
 
 [dependencies]
-cel-parser = {path="../parser", version="0.1.3-alpha.0"}
+cel-parser = { path = "../parser", version = "0.1.3-alpha.0" }
 thiserror = "1.0.22"
 
 [dev-dependencies]
-criterion = "0.3.3"
+criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
 name = "runtime"
