--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -3,7 +3,7 @@ name = "cel-interpreter"
 description = "An interpreter for the Common Expression Language (CEL)"
 repository = "https://github.com/orf/cel-rust"
 version = "0.1.3-alpha.0"
-authors = ["Tom Forbes <tom@tomforb.es>"]
+authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
 edition = "2018"
 license = "MIT"
 categories = ["interpreter", "cel"]
