--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -11,6 +11,8 @@ categories = ["interpreter", "cel"]
 [dependencies]
 cel-parser = { path = "../parser", version = "0.1.3-alpha.0" }
 thiserror = "1.0.22"
+chrono = "0.4.24"
+nom = "7.1.3"
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
