Added some examples about how to use the library (#5)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["cli", "parser", "interpreter"]
+members = ["cli", "parser", "interpreter", "example"]
 
 [profile.bench]
 lto = true
