--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 categories = ["interpreter", "cel"]
 
 [dependencies]
-cel-parser = { path = "../parser", version = "0.1.3-alpha.0" }
+cel-parser = { path = "../parser", version = "0.3.0" }
 thiserror = "1.0.40"
 chrono = "0.4.26"
 nom = "7.1.3"
