--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "cel-parser"
 description = "A parser for the Common Expression Language (CEL)"
-repository = "https://github.com/orf/cel-rust"
+repository = "https://github.com/clarkmcc/cel-rust"
 version = "0.3.0"
-authors = ["Tom Forbes <tom@tomforb.es>"]
+authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
 edition = "2018"
 license = "MIT"
 categories = ["parsing", "cel"]
