--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -13,6 +13,7 @@ cel-parser = { path = "../parser", version = "0.3.0" }
 thiserror = "1.0.40"
 chrono = "0.4.26"
 nom = "7.1.3"
+paste = "1.0.14"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
