Supporting thread-safe execution (#22)
* Supporting thread-safe execution

* Fixing examples

* Parser optimizations

* Cleanup and README updates

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -20,3 +20,7 @@ path = "src/variables.rs"
 [[bin]]
 name = "functions"
 path = "src/functions.rs"
+
+[[bin]]
+name = "threads"
+path = "src/threads.rs"
