Implement string parser (#24)
* Implement string parser

* Fix regular expression to properly match strings

* Refactor string parsing into several functions and added tests

* Remove string allocation when handling unicode

* Add simple benchmarks for string parsing

* Add simple benchmarks for string parsing

* Improve unicode parsing

* Move `res.push()` outside `match`

* Format the code

* Use try operator when parsing unicode characters

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -12,5 +12,12 @@ categories = ["parsing", "cel"]
 lalrpop-util = { version = "0.19.1", features = ["lexer"] }
 regex = "1.4.2"
 
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
 [build-dependencies]
 lalrpop = { version = "0.19.1", features = ["lexer"] }
+
+[[bench]]
+name = "runtime"
+harness = false
