--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -14,9 +14,11 @@ thiserror = "1.0.40"
 chrono = "0.4.26"
 nom = "7.1.3"
 paste = "1.0.14"
+serde = "1.0.196"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
+serde_bytes = "0.11.14"
 
 [[bench]]
 name = "runtime"
