--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4.26"
 nom = "7.1.3"
 paste = "1.0.14"
 serde = "1.0.196"
+regex = "1.10.5"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
