--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -2,14 +2,14 @@
 name = "cel-interpreter"
 description = "An interpreter for the Common Expression Language (CEL)"
 repository = "https://github.com/clarkmcc/cel-rust"
-version = "0.7.1"
+version = "0.8.0"
 authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
 edition = "2018"
 license = "MIT"
-categories = ["interpreter", "cel"]
+categories = ["compilers"]
 
 [dependencies]
-cel-parser = { path = "../parser", version = "0.6.0" }
+cel-parser = { path = "../parser", version = "0.7.0" }
 thiserror = "1.0.40"
 chrono = "0.4.26"
 nom = "7.1.3"
