--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -2,11 +2,11 @@
 name = "cel-parser"
 description = "A parser for the Common Expression Language (CEL)"
 repository = "https://github.com/clarkmcc/cel-rust"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
 edition = "2018"
 license = "MIT"
-categories = ["parsing", "cel"]
+categories = ["parsing"]
 
 [dependencies]
 lalrpop-util = { version = "0.19.1", features = ["lexer"] }
